# Insectae

./: pyproject.toml  setup.py
examples/: ffa.py  ga.py  gsa.py  island_model.pso.py  pbil.py  pso.py  umda.py
insectae/: __init__.py  alg_base.py  alg_bees.py  alg_bfoa.py  alg_cso.py  alg_de.py  alg_eda.py  alg_ffa.py  alg_ga.py  alg_gsa.py  alg_pso.py  alg_pso_dirty.py  alg_sa.py  common.py  common_dirty.py  decorators.py  executor.py  experimenter.py  goals.py  helpers.py  metrics.py  operators.py  patterns.py  patterns_dirty.py  stops.py  targets.py  timer.py  typing.py
insectae/island_model/: __init__.py  island_model.py  mpi_communication.py
insectae/parallel/: __init__.py  dask.py  mpi.py  multiprocessing.py  ray.py  threading.py
samples/: bees.py  bfoa.py  cso.py  de.py  island_model.ga.py  niching.py  sa.py  test_bees.py  test_bfoa.py  test_cso.py  test_de.py  test_ffa.py  test_ga.py  test_gsa.py  test_im.py  test_pbil.py  test_pso.py  test_sa.py  test_umda.py
tools/: test_executors_performance.py
